--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "bin": {
     "brain-games": "./bin/brain-games.js",
-    "brain-even": "./bin/brain-even.js"
+    "brain-even": "./bin/games/brain-even.js",
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
