--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "bin": {
     "brain-games": "./bin/brain-games.js",
     "brain-even": "./bin/games/brain-even.js",
+    "brain-calc": "./bin/games/brain-calc.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
